perf: implement bounded concurrency and JVM tuning